--- a/METARPG/fonts/gamefont.css
+++ b/METARPG/fonts/gamefont.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: GameFont;
-    src: url("mplus-1m-regular.ttf");
+    src: url("Retron2000.ttf");
 }
 
 .IIV::-webkit-media-controls-play-button,
